リファクタリング

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   <script type="text/javascript" src="simulation.js"></script>
 </head>
   <body onload="draw();">
-    <canvas id="tutorial" width="400" height="300"></canvas>
+    <canvas id="drawView" width="500" height="500" ></canvas>
   </body>
 </html>
